--- a/styles/main.css
+++ b/styles/main.css
@@ -7,10 +7,22 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 10px 0;
-  background-color: cadetblue;
+  background-color: rgb(144, 220, 222);
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .title {
-  text-transform: uppercase;
+  font-size: 42px;
   font-style: italic;
   color: crimson;
+  margin-bottom: 40px;
+}
+.img {
+  width: 500px;
+  height: 300px;
+  border-radius: 100px;
+  margin-bottom: 40px;
 }
